--- a/index.html
+++ b/index.html
@@ -2,81 +2,84 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Link Medsos Raka</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
     * {
       box-sizing: border-box;
     }
-
-    body, html {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      height: 100%;
+    html, body {
+      margin: 0; padding: 0;
+      width: 100%; height: 100%;
+      background: url('https://images.unsplash.com/photo-1519608487953-e999c86e7455?auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
+      background-size: cover;
       overflow: hidden;
+      font-family: 'Poppins', sans-serif;
+      color: #fff;
+      position: relative;
     }
-
-    .bg-video {
+    canvas#stars {
       position: fixed;
       top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+      width: 100vw;
+      height: 100vh;
       z-index: -1;
+      display: block;
     }
-
-    .overlay {
-      background: rgba(0, 0, 0, 0.5);
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
+    .spark {
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background: white;
+      pointer-events: none;
+      animation: spark 0.6s ease-out forwards;
+      filter: drop-shadow(0 0 6px white);
     }
-
+    @keyframes spark {
+      0% { transform: scale(1); opacity: 1; }
+      100% { transform: scale(2); opacity: 0; }
+    }
     .container {
       position: relative;
-      z-index: 1;
+      z-index: 10;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
-      color: white;
       padding: 20px;
+      backdrop-filter: blur(6px);
     }
-
     .logo {
       width: 130px;
       height: 130px;
       border-radius: 50%;
       border: 4px solid white;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+      box-shadow: 0 5px 15px rgba(255,255,255,0.4);
       margin-bottom: 20px;
       object-fit: cover;
       transition: transform 0.3s ease;
+      cursor: default;
     }
-
     .logo:hover {
       transform: scale(1.05);
     }
-
-    h1, h2 {
-      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
-    }
-
     h1 {
-      font-size: 32px;
+      font-size: 36px;
       margin: 0;
+      font-weight: 700;
+      text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
     }
-
     h2 {
-      font-size: 20px;
+      font-size: 22px;
+      font-weight: 500;
       margin-bottom: 25px;
+      color: #eee;
     }
-
     .link-wrapper {
       display: flex;
       flex-direction: column;
@@ -84,14 +87,13 @@
       width: 100%;
       max-width: 300px;
     }
-
     a, .ig-button {
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 10px;
       padding: 12px 20px;
-      background-color: rgba(255, 255, 255, 0.15);
+      background-color: rgba(255 255 255 / 0.1);
       border: 2px solid white;
       border-radius: 12px;
       color: white;
@@ -101,23 +103,20 @@
       transition: all 0.3s ease;
       backdrop-filter: blur(4px);
       cursor: pointer;
+      user-select: none;
     }
-
     a:hover, .ig-button:hover {
       background-color: white;
-      color: #1e3c72;
+      color: black;
       transform: scale(1.05);
     }
-
     .icon {
       width: 24px;
       height: 24px;
     }
-
     .ig-dropdown {
       position: relative;
     }
-
     .dropdown-content {
       display: none;
       flex-direction: column;
@@ -125,88 +124,153 @@
       top: 105%;
       left: 0;
       width: 100%;
-      z-index: 10;
+      z-index: 20;
     }
-
     .dropdown-content a {
       border-radius: 10px;
       font-size: 14px;
       margin-top: 5px;
+      background-color: rgba(255 255 255 / 0.1);
+      padding: 8px 15px;
+      transition: background-color 0.3s ease;
     }
-
+    .dropdown-content a:hover {
+      background-color: rgba(255 255 255 / 0.3);
+    }
     .dropdown-content.show {
       display: flex;
     }
-
     footer {
       margin-top: 40px;
       font-size: 14px;
-      opacity: 0.8;
+      opacity: 0.6;
+      user-select: none;
     }
   </style>
 </head>
 <body>
 
-  <video autoplay loop class="bg-video">
-    <source src="pompeii.mp4" type="video/mp4">
-    Browser kamu tidak mendukung video latar.
-  </video>
-  <div class="overlay"></div>
+<canvas id="stars"></canvas>
 
-  <div class="container">
-    <img src="raka.jpg" alt="Foto Raka" class="logo">
-    <h1>Raka Satri Adji</h1>
-    <h2>Link Medsos Aku 👋</h2>
+<div class="container">
+  <img src="raka.png" alt="Foto Raka" class="logo" />
+  <h1>Raka Satri Adji</h1>
+  <h2>Link Medsos Aku 👋</h2>
 
-    <div class="link-wrapper">
-      <div class="ig-dropdown">
-        <div class="ig-button" onclick="toggleDropdown()">
-          <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="IG" class="icon">
-          Instagram ▼
-        </div>
-        <div class="dropdown-content" id="igDropdown">
-          <a href="https://www.instagram.com/raka_satriadji/" target="_blank">AKUN 1</a>
-          <a href="https://www.instagram.com/rakasatriadji_/?locale=es_US%3FICID%3DBLOG_MBF_ES" target="_blank">AKUN 2</a>
-        </div>
+  <div class="link-wrapper">
+    <div class="ig-dropdown">
+      <div class="ig-button" onclick="toggleDropdown()">
+        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="IG" class="icon" />
+        Instagram
       </div>
-
-      <a href="https://web.facebook.com/raka.ajhabw/" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384053.png" alt="FB" class="icon">
-        Facebook
-      </a>
-
-      <a href="https://wa.me/6285722285670" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WA" class="icon">
-        WhatsApp
-      </a>
-
-      <a href="https://www.youtube.com/@nexusnook17" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YT" class="icon">
-        YouTube
-      </a>
-
-      <a href="https://lynk.id/raka17" target="_blank">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNj3jhc342prS77sugXs5o6TKLboVXmOp9zQ&s" alt="LynkID" class="icon">
-        Lynk ID
-      </a>
+      <div class="dropdown-content" id="igDropdown">
+        <a href="https://www.instagram.com/raka_satriadji/" target="_blank" rel="noopener noreferrer">AKUN 1</a>
+        <a href="https://www.instagram.com/rakasatriadji_/" target="_blank" rel="noopener noreferrer">AKUN 2</a>
+      </div>
     </div>
 
-    <footer>© 2025 Raka Satri Adji</footer>
+    <a href="https://web.facebook.com/raka.ajhabw/" target="_blank" rel="noopener noreferrer">
+      <img src="https://cdn-icons-png.flaticon.com/512/1384/1384053.png" alt="FB" class="icon" />
+      Facebook
+    </a>
+
+    <a href="https://wa.me/6285722285670" target="_blank" rel="noopener noreferrer">
+      <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WA" class="icon" />
+      WhatsApp
+    </a>
+
+    <a href="https://www.youtube.com/@nexusnook17" target="_blank" rel="noopener noreferrer">
+      <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YT" class="icon" />
+      YouTube
+    </a>
+
+    <a href="https://lynk.id/raka17" target="_blank" rel="noopener noreferrer">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNj3jhc342prS77sugXs5o6TKLboVXmOp9zQ&s" alt="LynkID" class="icon" />
+      Lynk ID
+    </a>
   </div>
 
-  <script>
-    function toggleDropdown() {
-      const dropdown = document.getElementById('igDropdown');
-      dropdown.classList.toggle('show');
+  <footer>© 2025 Raka Satri Adji</footer>
+</div>
+
+<script>
+  function toggleDropdown() {
+    document.getElementById('igDropdown').classList.toggle('show');
+  }
+
+  window.onclick = function(e) {
+    if (!e.target.closest('.ig-dropdown')) {
+      document.getElementById('igDropdown').classList.remove('show');
     }
 
-    // Nutup dropdown kalau klik di luar
-    window.onclick = function(event) {
-      if (!event.target.closest('.ig-dropdown')) {
-        document.getElementById('igDropdown').classList.remove('show');
+    const spark = document.createElement('div');
+    spark.classList.add('spark');
+    spark.style.left = e.pageX + 'px';
+    spark.style.top = e.pageY + 'px';
+    document.body.appendChild(spark);
+    setTimeout(() => spark.remove(), 600);
+  }
+
+  const canvas = document.getElementById('stars');
+  const ctx = canvas.getContext('2d');
+
+  function resize() {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+  }
+  resize();
+  window.addEventListener('resize', resize);
+
+  const STAR_COUNT = 500;
+
+  class Star {
+    constructor() {
+      this.reset();
+    }
+    reset() {
+      this.x = Math.random() * canvas.width;
+      this.y = Math.random() * -canvas.height;
+      this.radius = Math.random() * 1.5 + 0.5;
+      this.dy = Math.random() * 4 + 2;
+      this.opacity = Math.random() * 0.6 + 0.4;
+      this.glow = Math.random() * 0.8 + 0.2;
+    }
+    draw() {
+      const gradient = ctx.createRadialGradient(
+        this.x, this.y, 0,
+        this.x, this.y, this.radius * 6
+      );
+      gradient.addColorStop(0, `rgba(255,255,255,${this.opacity})`);
+      gradient.addColorStop(0.5, `rgba(255,255,255,${this.glow})`);
+      gradient.addColorStop(1, 'rgba(255,255,255,0)');
+      ctx.fillStyle = gradient;
+      ctx.beginPath();
+      ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+      ctx.fill();
+    }
+    update() {
+      this.y += this.dy;
+      if (this.y - this.radius > canvas.height) {
+        this.reset();
       }
     }
-  </script>
+  }
+
+  const stars = [];
+  for(let i=0; i < STAR_COUNT; i++) {
+    stars.push(new Star());
+  }
+
+  function animate() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    stars.forEach(star => {
+      star.update();
+      star.draw();
+    });
+    requestAnimationFrame(animate);
+  }
+  animate();
+</script>
 
 </body>
 </html>
