--- a/index.html
+++ b/index.html
@@ -150,7 +150,10 @@
 </head>
 <body>
 
-<canvas id="stars"></canvas>
+  <canvas id="stars"></canvas>
+  <audio autoplay loop>
+    <source src="mp.mp3" type="audio/mp3">
+  </audio>
 
 <div class="container">
   <img src="raka.png" alt="Foto Raka" class="logo" />
