--- a/index.html
+++ b/index.html
@@ -30,14 +30,21 @@
     <h1>Raka Satri Adji</h1>
     <h2>Link Medsos Aku 👋</h2>
 
+    <div class="link-wrapper">
+      <div class="ig-dropdown">
+        <div class="ig-button" onclick="toggleDropdown()">
+          <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="IG" class="icon" />
+          Instagram
+        </div>
+        <div class="dropdown-content" id="igDropdown">
+          <a href="https://www.instagram.com/raka_satriadji/" target="_blank" rel="noopener noreferrer">AKUN 1</a>
+          <a href="https://www.instagram.com/rakasatriadji_/" target="_blank" rel="noopener noreferrer">AKUN 2</a>
+        </div>
+      </div>
+
       <a href="https://web.facebook.com/raka.ajhabw/" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/1384/1384053.png" alt="FB" class="icon" />
         Facebook
-      </a>
-
-      <a href="https://www.instagram.com/raka_satriadji/" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="WA" class="icon" />
-        Instagram
       </a>
 
       <a href="https://www.youtube.com/@nexusnook17" target="_blank">
