--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
   <script src="script.js" defer></script>
   <audio autoplay loop>
-    <source src="/asset/mp.mp3" type="audio/mp3">
+    <source src="/asset/m.mp3" type="audio/mp3">
   </audio>
 
-    <!-- Background blur -->
+  <!-- Background blur -->
   <div class="blur-background"></div>
   <div class="overlay"></div>
 
@@ -31,20 +31,19 @@
     <h2>Link Medsos Aku 👋</h2>
 
     <div class="link-wrapper">
-      <div class="ig-dropdown">
-        <div class="ig-button" onclick="toggleDropdown()">
-          <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="IG" class="icon" />
-          Instagram
-        </div>
-        <div class="dropdown-content" id="igDropdown">
-          <a href="https://www.instagram.com/raka_satriadji/" target="_blank" rel="noopener noreferrer">AKUN 1</a>
-          <a href="https://www.instagram.com/rakasatriadji_/" target="_blank" rel="noopener noreferrer">AKUN 2</a>
-        </div>
-      </div>
+      <a href="https://www.instagram.com/rakasatriadji17/" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="IG" class="icon" />
+        Instagram
+      </a>
 
       <a href="https://web.facebook.com/raka.ajhabw/" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/1384/1384053.png" alt="FB" class="icon" />
         Facebook
+      </a>
+
+      <a href="https://www.tiktok.com/@rakasatriadji_?is_from_webapp=1&sender_device=pc" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok" class="icon" />
+        TikTok
       </a>
 
       <a href="https://www.youtube.com/@nexusnook17" target="_blank">
