--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <script src="script.js" defer></script>
   <audio autoplay loop>
-    <source src="/asset/mp.mp3" type="audio/mp3">
+    <source src="../asset/mp.mp3" type="audio/mp3">
   </audio>
 
   <!-- Background blur -->
@@ -61,4 +61,5 @@
   </div>
 </body>
 </html>
+
 
